WINDUP-3602 Run project's tests on JDK 11 and 17 (#43)
* WINDUP-3602 Enable GH Jobs matrix on JDK 11 and 17

* WINDUP-3602 Fix tests for properly manage 'defaultValue' for @Parameter fields

* WINDUP-3602 Added windup and windup-rulesets dependencies builds

* WINDUP-3602 Enabled enableCrossOsArchive cache for Windows job

* WINDUP-3602 Set '.m2' relative path

* WINDUP-3602 Removed 'user-settings' option for Furnace

* WINDUP-3602 Added 'windup-maven-plugin-build-tmp' for testing an alternative approach

* WINDUP-3602 Further tests with windup-maven-plugin-build-tmp job

* WINDUP-3602 Switched to the alternative approach

* WINDUP-3602 Updated README with JDK 17 options